[metadata]
name = helper_functions
version = 0.1

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where=src

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=src --cov-report=term-missing

[coverage:run]
source = src

[isort]
profile = black
multi_line_output = 3

[flake8]
max-line-length = 88
extend-ignore = E203